--- a/assets/fonts/fonts.css
+++ b/assets/fonts/fonts.css
@@ -1,69 +1,114 @@
 @font-face {
-  font-family: 'Lato Thin';
-  font-style: normal;
-  font-weight: 100;
-  src: url('Lato-Thin.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Lato Thin Italic';
-  font-style: italic;
-  font-weight: 100;
-  src: url('Lato-ThinItalic.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Lato Regular';
-  font-style: normal;
-  font-weight: 400;
-  src: url('Lato-Regular.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Lato Light';
-  font-style: normal;
-  font-weight: 300;
-  src: url('Lato-Light.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Lato Light Italic';
-  font-style: italic;
-  font-weight: 300;
-  src: url('Lato-LightItalic.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Lato Bold';
-  font-style: normal;
-  font-weight: 700;
-  src: url('Lato-Bold.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Lato Bold Italic';
-  font-style: italic;
-  font-weight: 700;
-  src: url('Lato-Bold.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Lato Black';
-  font-style: normal;
-  font-weight: 900;
-  src: url('Lato-Black.ttf') format('ttf');
-}
-@font-face {
-  font-family: 'Lato Black Italic';
-  font-style: italic;
-  font-weight: 900;
-  src: url('Lato-BlackItalic.ttf') format('ttf');
+  font-family: "PhosphateSolid";
+  src: url("//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.eot");
+  src: url("//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.eot?#iefix")
+      format("embedded-opentype"),
+    url("//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.woff2")
+      format("woff2"),
+    url("//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.woff")
+      format("woff"),
+    url("//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.ttf")
+      format("truetype"),
+    url("//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.svg#PhosphateSolid")
+      format("svg");
 }
 
+/* lato-300 - latin */
 @font-face {
-  font-family: 'PhosphateSolid';
-  src: url('//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.eot');
-  src: url('//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.eot?#iefix')
-      format('embedded-opentype'),
-    url('//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.woff2')
-      format('woff2'),
-    url('//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.woff')
-      format('woff'),
-    url('//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.ttf')
-      format('truetype'),
-    url('//db.onlinewebfonts.com/t/07d939a97235daed1989c86d4e6e6275.svg#PhosphateSolid')
-      format('svg');
+  font-family: "Lato Light";
+  font-style: normal;
+  font-weight: 300;
+  src: url("lato-v16-latin-300.eot"); /* IE9 Compat Modes */
+  src: local("Lato Light"), local("Lato-Light"),
+    url("lato-v16-latin-300.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("lato-v16-latin-300.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("lato-v16-latin-300.woff") format("woff"),
+    /* Modern Browsers */ url("lato-v16-latin-300.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("lato-v16-latin-300.svg#Lato") format("svg"); /* Legacy iOS */
+}
+/* lato-300italic - latin */
+@font-face {
+  font-family: "Lato Light Italic";
+  font-style: italic;
+  font-weight: 300;
+  src: url("lato-v16-latin-300italic.eot"); /* IE9 Compat Modes */
+  src: local("Lato Light Italic"), local("Lato-LightItalic"),
+    url("lato-v16-latin-300italic.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("lato-v16-latin-300italic.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("lato-v16-latin-300italic.woff")
+      format("woff"),
+    /* Modern Browsers */ url("lato-v16-latin-300italic.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("lato-v16-latin-300italic.svg#Lato")
+      format("svg"); /* Legacy iOS */
+}
+/* lato-regular - latin */
+@font-face {
+  font-family: "Lato Regular";
+  font-style: normal;
+  font-weight: 400;
+  src: url("lato-v16-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local("Lato Regular"), local("Lato-Regular"),
+    url("lato-v16-latin-regular.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("lato-v16-latin-regular.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("lato-v16-latin-regular.woff")
+      format("woff"),
+    /* Modern Browsers */ url("lato-v16-latin-regular.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("lato-v16-latin-regular.svg#Lato")
+      format("svg"); /* Legacy iOS */
+}
+/* lato-700 - latin */
+@font-face {
+  font-family: "Lato Bold";
+  font-style: normal;
+  font-weight: 700;
+  src: url("lato-v16-latin-700.eot"); /* IE9 Compat Modes */
+  src: local("Lato Bold"), local("Lato-Bold"),
+    url("lato-v16-latin-700.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("lato-v16-latin-700.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("lato-v16-latin-700.woff") format("woff"),
+    /* Modern Browsers */ url("lato-v16-latin-700.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("lato-v16-latin-700.svg#Lato") format("svg"); /* Legacy iOS */
+}
+/* lato-700italic - latin */
+@font-face {
+  font-family: "Lato Bold Italic";
+  font-style: italic;
+  font-weight: 700;
+  src: url("lato-v16-latin-700italic.eot"); /* IE9 Compat Modes */
+  src: local("Lato Bold Italic"), local("Lato-BoldItalic"),
+    url("lato-v16-latin-700italic.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("lato-v16-latin-700italic.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("lato-v16-latin-700italic.woff")
+      format("woff"),
+    /* Modern Browsers */ url("lato-v16-latin-700italic.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("lato-v16-latin-700italic.svg#Lato")
+      format("svg"); /* Legacy iOS */
+}
+/* lato-900 - latin */
+@font-face {
+  font-family: "Lato Black";
+  font-style: normal;
+  font-weight: 900;
+  src: url("lato-v16-latin-900.eot"); /* IE9 Compat Modes */
+  src: local("Lato Black"), local("Lato-Black"),
+    url("lato-v16-latin-900.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("lato-v16-latin-900.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("lato-v16-latin-900.woff") format("woff"),
+    /* Modern Browsers */ url("lato-v16-latin-900.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("lato-v16-latin-900.svg#Lato") format("svg"); /* Legacy iOS */
+}
+/* lato-900italic - latin */
+@font-face {
+  font-family: "Lato Black Italic";
+  font-style: italic;
+  font-weight: 900;
+  src: url("lato-v16-latin-900italic.eot"); /* IE9 Compat Modes */
+  src: local("Lato Black Italic"), local("Lato-BlackItalic"),
+    url("lato-v16-latin-900italic.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("lato-v16-latin-900italic.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("lato-v16-latin-900italic.woff")
+      format("woff"),
+    /* Modern Browsers */ url("lato-v16-latin-900italic.ttf") format("truetype"),
+    /* Safari, Android, iOS */ url("lato-v16-latin-900italic.svg#Lato")
+      format("svg"); /* Legacy iOS */
 }
